--- a/styles.css
+++ b/styles.css
@@ -1,37 +1,33 @@
-img {
-    width: 400px;
-}
+/* * {
+    outline: 1px solid green !important;
+}  */
 
-p {
-    font-family: 'Times New Roman';
-    font-size: 14px;
-}
 
-h1 {
-    font-size: 400%;
-    color: red;
-}
+.page-header{
+    width: 100%;
+    height: 120px;
 
-.style1 {
-    color: gray;
-    font-size: 20px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    word-spacing: 5px;
-}
+    display: grid;
+    grid-template-columns: 300px auto 300px;
+    grid-template-areas: "logo nav btn";
+    gap: 10px;
+    place-items: center;
 
-.page-title {
-    font-size: 20px;
+    background-color: gray;
+    background-size: cover;
 }
-
-.page-title,
-#title {
-    border: 1px solid green;
+.page-header__logo {
+    grid-area: "logo";
 }
-
-.btn {
-    background-color: transparent;
+.page-header_logo-icon{
+    height: 120px;
+    object-fit: cover;
 }
-
-.btn--red {
-    background-color: #BC3324;
+.page-header__nav{
+    grid-area:"nav";
+    padding: 20px;
+    text-align: center;
+}
+.page-header__btn{
+    grid-area:"btn";
 }
