--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,60 @@
 /* * {
     outline: 1px solid green !important;
 }  */
-
-
-.page-header{
+html,
+body{
+    margin: 0;
+    padding: 0;
     width: 100%;
-    height: 120px;
+}
 
-    display: grid;
-    grid-template-columns: 300px auto 300px;
-    grid-template-areas: "logo nav btn";
-    gap: 10px;
-    place-items: center;
+.body {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    padding-top: 147px;
+}
 
-    background-color: gray;
-    background-size: cover;
+.page-header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 147px;
+    display: flex;
+    align-items: center;
+    background-color: rgba(222, 222, 222, 0.5);
+    backdrop-filter: blur(20px);
+    z-index: 100;
 }
-.page-header__logo {
-    grid-area: "logo";
+
+.page-header__container {
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    max-width: 1414px;
+    margin: 0 auto;
+    padding-left: 40px;
+    padding-right: 40px;
 }
-.page-header_logo-icon{
-    height: 120px;
-    object-fit: cover;
-}
+
 .page-header__nav{
-    grid-area:"nav";
-    padding: 20px;
-    text-align: center;
+    display: flex;
+    margin: 0 auto;
 }
-.page-header__btn{
-    grid-area:"btn";
+
+.page-header__nav-link{
+    text-decoration: none;
+}
+
+.main{
+    flex: 1 0 auto;
+    background-color: rgb(195, 228, 144);
+}
+
+.page-footer{
+    background-color: rgb(189, 158, 218);
+    flex: 0 0 auto;
 }
