--- a/src/styles/global/common.less
+++ b/src/styles/global/common.less
@@ -1,8 +1,9 @@
-html,body {
+  html,body {
     width: 100%; 
     margin: 0;
     padding: 0;
   }
+
   body {
     box-sizing: border-box;
     display: flex;
@@ -21,19 +22,64 @@ html,body {
     line-height: 1.375;
     overflow-x: hidden;
     padding-top: 147px;
+          
+  @media @bw1660 {
+    padding-top: 111px;
   }
+  @media @bw768 {
+    padding-top: 70px;
+  }
+  }
+
   .main {
     flex: 1 0 auto;
   }
-  .page-footer {
-    flex: 0 0 auto;
+
+  .home {
+    padding-top: 147px;
+
+    &__listing {
+      margin-bottom: 95px;
+    }
   }
+
+  .title {
+    margin: 0 0 150px;
+    box-sizing: border-box;
+    padding: 7px 45px 9px;
+    max-width: 624px;
+    width: 100%;
+    text-align: center;
+    background-color: #1F1E1E;
+    //text-transform: uppercase;
+    font-family: Lora;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 500;
+    color: #FFFFFF;
+  }
+
   a {
     color: @black;
     outline: none;
   }
+  
   img {
     max-width: 100%;
     height: auto;
     object-fit: cover;
   }
+
+input,
+textarea,
+button,
+select{
+  box-shadow: none;
+  outline: none;
+  color: @black;
+  font-family: @font1;
+}
+
+button{
+  cursor: pointer;
+}
